# licences-server

./: Cargo.toml  Containerfile  licenses.sqlite3  schema.sql
.github/workflows/: package.yml
src/: main.rs
static/: index.html  refresh.js  style.css
