[package]
name = "licenses-server"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.96"
axum = { version = "0.7.7", features = ["json", "tracing"] }
axum-extra = "0.9.4"
rusqlite = { version = "0.34.0", features = ["bundled"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.44.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.6.2", features = ["cors", "fs", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
